Use HTML template (data-template="ledger-row") rather than html() node builder to ledger display

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -121,8 +121,6 @@
             <label>Date
               <input type="date" name="date">
             </label>
-          </p>
-          <p>
             <label>Transactee
               <input type="text" list="transactees" name="transactee" />
             </label>
@@ -131,8 +129,6 @@
             <label>Check #
               <input type="text" name="checknum">
             </label>
-          </p>
-          <p>
             <label>Amount
               <input type="number" step="0.01" name="amount">
             </label>
@@ -168,60 +164,23 @@
 
         <h1>Ledger</h1>
 
-        <h2>DOM builder approach</h2>
-
-        <div class="ledger" id="ledger"> </div>
-
-        <h2>Template approach</h2>
-
-        <div class="ledger" id="ledger-2">
+        <div class="ledger" id="ledger">
           <div>
             <div>Edit</div>
             <div>Transaction</div>
             <div>Amount</div>
             <div>Bank</div>
           </div>
-          <div class="ledger-active">
-            <div data-show="/form/ledger|1">►</div>
+          <div data-template="ledger-row" class="ledger-active">
+            <div data-show="/page/form|1">►</div>
             <div><span>24 May 2023</span><br><span>Bank · Wages</span><br><span>Actual 103.50</span></div>
             <div>45.00</div>
             <div>100.00</div>
-          </div>
-          <div>
-            <div data-show="/form/ledger|1">►</div>
-            <div><span>24a</span><br><span>b</span><br><span>c</span></div>
-            <div>b</div>
-            <div>c</div>
-          </div>
-          <div>
-            <div data-show="/form/ledger|1">►</div>
-            <div><span>24a</span><br><span>b</span><br><span>c</span></div>
-            <div>b</div>
-            <div>c</div>
-          </div>
-          <div>
-            <div data-show="/form/ledger|1">►</div>
-            <div><span>24a</span><br><span>b</span><br><span>c</span></div>
-            <div>b</div>
-            <div>c</div>
-          </div>
-          <div>
-            <div data-show="/form/ledger|1">►</div>
-            <div><span>24a</span><br><span>b</span><br><span>c</span></div>
-            <div>b</div>
-            <div>c</div>
-          </div>
-          <div>
-            <div data-show="/form/ledger|1">►</div>
-            <div><span>24a</span><br><span>b</span><br><span>c</span></div>
-            <div>b</div>
-            <div>c</div>
           </div>
         </div>
 
         <p>
           <button data-show="/">Home</button>
-          <button data-action="practice">Practice</button>
           <button data-show="/help">Help</button>
         </p>
 
