Save form edit results

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -117,6 +117,7 @@
         <h1>Form</h1>
 
         <form id="transaction">
+          <input type="hidden" name="pos" />
           <p>
             <label>Date
               <input type="date" name="date">
