Add new record logic

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -181,6 +181,7 @@
         </div>
 
         <p>
+          <button data-action="new">New transaction</button>
           <button data-show="/">Home</button>
           <button data-show="/help">Help</button>
         </p>
