--- a/pwa/index.html
+++ b/pwa/index.html
@@ -192,11 +192,29 @@
 
         <h1>Minimal PWA Help</h1>
 
+          <details>
+
+          <summary>Introduction</summary>
+
+          <p>
+          This project demonstrates basic components of a progressive web app
+          (PWA).
+          </p>
+
+          <p>
+          This particular project uses a rather opinionated approach in that
+          each web page is put into its own div block in an amalgamated HTML
+          page. This div blocks are siblings. When one page is shown
+          programtically its siblings are automatically hidden. This allows the
+          application to function quickly since there are no network calls to
+          retreive content.
+          </p>
+
+        </details>
+
         <details>
 
           <summary>Development</summary>
-
-          <h2>Program structure</h2>
 
           <p>
           The technique shown in this project is to use a single HTML page that
@@ -255,12 +273,11 @@
 
         <details>
 
-          <summary>Styling</summary>
-
-          <h2>HTML examples</h2>
+          <summary>HTML examples</summary>
 
           <p>
-          This page demonstrates various HTML elements.
+          This page demonstrates various HTML elements and how they are
+          rendered with the classless stylesheet.
           </p>
 
           <p>
@@ -433,100 +450,6 @@
               </tr>
             </tbody>
           </table>
-
-        </details>
-
-        <details>
-
-          <summary>Lorem ipsum dolor sit amet</summary>
-
-          <p>
-          <b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Ut elit
-          tortor, pellentesque gravida nisl ut, varius eleifend tellus. Sed in
-          gravida eros, quis luctus diam. Quisque nec varius massa, semper
-          vehicula nunc. Phasellus eu auctor nisi. Praesent sollicitudin
-          fringilla risus at imperdiet. Mauris hendrerit sit amet nisl eget
-          pretium. Cras id diam vulputate, vestibulum nunc ac, volutpat mauris.
-          Phasellus eu lorem interdum, euismod arcu at, pharetra justo. Morbi
-          in ultricies orci, nec convallis ante. Maecenas viverra faucibus
-          tincidunt. Curabitur vel auctor eros. Suspendisse sed venenatis est,
-          eget viverra massa.
-          </p>
-
-        </details>
-
-        <details>
-
-          <summary>Sed tincidunt</summary>
-
-          <p>
-          <b>Sed tincidunt, magna sit amet iaculis maximus</b>, justo sapien dictum
-          risus, eget eleifend odio orci vel quam. Fusce finibus, sapien sed
-          sollicitudin semper, sem justo euismod nisi, et auctor eros eros et
-          nisi. Aenean quis consequat leo. Aliquam erat augue, mattis maximus
-          nisl sit amet, molestie gravida turpis. Sed dapibus aliquam urna quis
-          dignissim. In pharetra eros in laoreet elementum. Duis ac hendrerit
-          mauris, nec mollis ex. Cras in lorem ac orci tincidunt luctus. Donec
-          vestibulum rhoncus placerat. Morbi sed tincidunt tortor. Sed nisl
-          dolor, lacinia vitae sem in, elementum molestie felis. Vestibulum
-          convallis ante odio, ac luctus est egestas vestibulum. Phasellus ac
-          neque massa. Quisque euismod erat nec quam suscipit, non venenatis
-          ipsum molestie. Mauris ac semper arcu. Maecenas tincidunt dapibus
-          lorem, sed blandit justo tempor at.
-          </p>
-
-        </details>
-
-        <details>
-
-          <summary>Ut vitae aliquet augue</summary>
-
-          <p>
-          <b>Ut vitae aliquet augue.</b> Etiam ut urna faucibus magna sodales ornare.
-          Aenean in eros ligula. Sed imperdiet nulla id nisl laoreet tincidunt.
-          Donec porta felis ipsum, et sagittis nisl luctus a. Nullam sed neque
-          scelerisque, faucibus nisi vel, rutrum tellus. Sed id tortor eu diam
-          consequat venenatis. Fusce vehicula nunc at rhoncus tempor. Fusce
-          sagittis lectus libero, ac egestas magna ornare finibus. Class aptent
-          taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-          himenaeos. Sed id sollicitudin odio.
-          </p>
-
-        </details>
-
-        <details>
-
-          <summary>Mauris sagittis aliquet ligula</summary>
-
-          <p>
-          <b>Mauris sagittis aliquet ligula</b>, non aliquet enim tempor vel. Nunc
-          pharetra quam vestibulum libero consectetur, id eleifend ligula
-          cursus. Pellentesque in justo egestas, dictum odio sit amet,
-          sollicitudin leo. In hac habitasse platea dictumst. Ut faucibus nibh
-          tortor, non sodales urna molestie ut. Aenean ultricies nec magna
-          rhoncus pharetra. Duis pretium vitae libero semper luctus. Praesent
-          placerat turpis ut ligula lacinia sollicitudin. Donec aliquam augue
-          id tincidunt feugiat. Class aptent taciti sociosqu ad litora torquent
-          per conubia nostra, per inceptos himenaeos. Duis porttitor ornare
-          eleifend. Quisque condimentum ultricies diam rutrum viverra. Nam sit
-          amet nisl sit amet nisl eleifend dignissim id eget ex. Mauris sit
-          amet dolor a augue mattis finibus. Vestibulum eu venenatis nisi.
-          </p>
-
-        </details>
-
-        <details>
-
-          <summary>Maecenas cursus</summary>
-
-          <p>
-          <b>Maecenas cursus non elit quis tincidunt.</b> Vestibulum eget interdum
-          dui, elementum elementum nisl. Integer tincidunt pretium eleifend.
-          Nam venenatis, sem sed hendrerit rhoncus, enim nunc tincidunt massa,
-          ac sollicitudin elit est ac libero. Vivamus eu laoreet est. Vivamus
-          molestie vehicula nunc ac cursus. Sed nisi felis, porttitor eget
-          interdum nec, eleifend sit amet ante.
-          </p>
 
         </details>
 
