--- a/pwa/index.html
+++ b/pwa/index.html
@@ -106,11 +106,50 @@
         </div>
 
         <p>
-          <button data-show="/page/ledger">Ledger</button>
+          <button data-action="ledger">Ledger</button>
           <button data-show="/help">Help</button>
         </p>
 
       </div>
+
+      <div data-page="/page/ledger-no-data" style="display:none;">
+
+        <h1>Ledger</h1>
+
+        <p>
+        There is currently no data associated with this application. To restore
+        a previously backed up project, click the following button.
+        </p>
+
+        <form data-name="project-restore">
+
+          <p>
+            <input id="datafile" type="file" name="datafile" accept="application/json">
+          </p>
+
+          <p><button data-action="project-restore">Restore project</button></p>
+
+        </form>
+
+        <details>
+
+          <summary>Alternative option</summary>
+
+          <h2>Load sample data</h2>
+
+          <p>
+          Click the following button to initialize the program with a small sample
+          project. You will be able to modify the data to adapt it to your own project.
+          </p>
+
+          <p><button data-action="sample">Load sample</button></p>
+
+        </details>
+
+        <p><button data-href="/help">Help</button></p>
+
+      </div>
+
 
       <div data-page="/page/form" style="display:none;">
 
@@ -182,6 +221,7 @@
 
         <p>
           <button data-action="new">New transaction</button>
+          <button data-action="project-save">Save project</button>
           <button data-show="/">Home</button>
           <button data-show="/help">Help</button>
         </p>
@@ -450,6 +490,60 @@
               </tr>
             </tbody>
           </table>
+
+        </details>
+
+        <details>
+
+          <summary>About</summary>
+
+          <p>
+          TODO about application
+          </p>
+
+          <p>
+          Dedicated to Hans Valley
+          </p>
+
+        </details>
+
+        <details>
+
+          <summary>MIT License</summary>
+
+          <h2>
+          MIT License
+          </h2>
+
+          <p>
+          Copyright Maura and Kurt Jung
+          </p>
+
+          <p>
+          Permission is hereby granted, free of charge, to any person obtaining
+          a copy of this software and associated documentation files (the
+          "Software"), to deal in the Software without restriction, including
+          without limitation the rights to use, copy, modify, merge, publish,
+          distribute, sublicense, and/or sell copies of the Software, and to
+          permit persons to whom the Software is furnished to do so, subject to
+          the following conditions:
+          </p>
+
+          <p>
+          The above copyright notice and this permission notice shall be
+          included in all copies or substantial portions of the Software.
+          </p>
+
+          <p><b>
+          THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+          EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+          MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+          NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
+          BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
+          ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+          CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+          SOFTWARE.
+          </b></p>
 
         </details>
 
