Add droplist of unique transactees

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -555,6 +555,7 @@
     </div>
 
     <datalist id="transactees">
+      <option data-template="option" value="x"> </option>
     </datalist>
 
     <script src="utility.js"></script>
