Restrict the strikethrough to the transaction amount for voided records

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -497,7 +497,8 @@
           <summary>About</summary>
 
           <p>
-          TODO about application
+          This demonstration shows some components and techniques that could be
+          used in real applications.
           </p>
 
           <p>
