--- a/pwa/index.html
+++ b/pwa/index.html
@@ -502,10 +502,10 @@
           </p>
 
           <p>
-          Dedicated to <b>Hans Valley</b>, friend and, for too short a time,
-          former colleague. This code may not achieve the appellation of
-          "elegant" that we always strove for, but it does stand on its own
-          without bulky dependencies.
+          This little program is dedicated to <b>Hans Valley</b>, friend and,
+          for too short a time, former colleague. This code may not achieve the
+          appellation of "elegant" that we always strove for, but it does stand
+          on its own without bulky dependencies.
           </p>
 
         </details>
