Change name from "Minimal PWA" to "Let's Build a PWA"

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -7,7 +7,7 @@
     <title>Let's Build a PWA</title>
     <link rel="apple-touch-icon" href="min-pwa.png">
     <meta name="theme-color" content="#404040" />
-    <meta content="Minimal progressive web app" name="Description" />
+    <meta content="Let's Build a PWA" name="Description" />
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="favicon.ico">
@@ -229,7 +229,7 @@
 
       <div data-page="/help" style="display:none;">
 
-        <h1>Minimal PWA Help</h1>
+        <h1>Help for Let's Build a PWA</h1>
 
           <details>
 
@@ -361,9 +361,9 @@
           </p>
 
           <figure>
-            <a href="/pwa/min-pwa.png"><img src="/pwa/min-pwa.png" alt="Minimal PWA"></a>
+            <a href="/pwa/min-pwa.png"><img src="/pwa/min-pwa.png" alt="Let's Build a PWA"></a>
             <figcaption>
-              Minimal PWA
+              Let's Build a PWA
             </figcaption>
           </figure>
 
