Adjust help page title

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -229,7 +229,7 @@
 
       <div data-page="/help" style="display:none;">
 
-        <h1>Help for Let's Build a PWA</h1>
+        <h1>Help</h1>
 
           <details>
 
