Revise name of graphic

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Let's Build a PWA</title>
-    <link rel="apple-touch-icon" href="min-pwa.png">
+    <link rel="apple-touch-icon" href="pwa.png">
     <meta name="theme-color" content="#404040" />
     <meta content="Let's Build a PWA" name="Description" />
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
@@ -361,7 +361,7 @@
           </p>
 
           <figure>
-            <a href="/pwa/min-pwa.png"><img src="/pwa/min-pwa.png" alt="Let's Build a PWA"></a>
+            <a href="/pwa/pwa.png"><img src="/pwa/pwa.png" alt="Let's Build a PWA"></a>
             <figcaption>
               Let's Build a PWA
             </figcaption>
